--- a/src/themes/material/extends/_navbar.scss
+++ b/src/themes/material/extends/_navbar.scss
@@ -1,4 +1,4 @@
-%ig-navbar-display {
+%igx-navbar-display {
     $background-color: $primary-color;
     
     position: fixed;
@@ -15,15 +15,15 @@
     z-index: 4;
 }
 
-%ig-navbar-left-btn {
+%igx-navbar-left-btn {
     padding-left: 16px;
 }
 
-%ig-navbar-left-btn--disabled {
+%igx-navbar-left-btn--disabled {
     display: none;
 }
 
-%ig-navbar-title {
+%igx-navbar-title {
     padding: 0;
     margin: 0;
     font-size: 18px;
