--- a/src/themes/material/extends/_radio.scss
+++ b/src/themes/material/extends/_radio.scss
@@ -1,4 +1,4 @@
-%radio-lbl-display {
+%igx-radio-lbl-display {
     display: inline-block;
     position: relative;
     cursor: pointer;
@@ -24,38 +24,38 @@
     }
 }
 
-%radio-lbl-notchecked--before {
+%igx-radio-lbl-notchecked--before {
     transform: scale(0);
 }
 
-%radio-lbl-notchecked--after {
+%igx-radio-lbl-notchecked--after {
     border: 2px solid $radio-empty-color;
 }
 
-%radio-lbl-checked--before {
+%igx-radio-lbl-checked--before {
     border: $radio-border;
     background-color: $radio-fill-color;
     transform: scale(.5);
 }
 
-%radio-lbl-checked--after {
+%igx-radio-lbl-checked--after {
     border: $radio-border;
 }
 
-%radio-lbl--disabled {
+%igx-radio-lbl--disabled {
     pointer-events: none;
     color: $input-disabled-color;
 }
 
-%radio-lbl-notchecked--disabled-after {
+%igx-radio-lbl-notchecked--disabled-after {
     border: 2px solid $input-disabled-color;
 }
 
-%radio-lbl-checked--disabled-before {
+%igx-radio-lbl-checked--disabled-before {
     background-color: $input-disabled-color;
     border: 2px solid $input-disabled-color;
 } 
 
-%radio-lbl-checked--disabled-after {
+%igx-radio-lbl-checked--disabled-after {
     border: 2px solid $input-disabled-color;
 }
