--- a/src/themes/material/modules/_buttons.scss
+++ b/src/themes/material/modules/_buttons.scss
@@ -1,36 +1,39 @@
 @include b(ig-button) {
-  @extend %button-display;
+  @extend %igx-button-display;
 
   @include m(flat) {
-    @extend %button-display;
-    @extend %button-flat;
+    @extend %igx-button-display;
+    @extend %igx-button--flat;
   }
 
   @include m(raised) {
-    @extend %button-display;
-    @extend %button-raised;
+    @extend %igx-button-display;
+    @extend %igx-button--raised;
   }
 
   @include m(gradient) {
-    @extend %button-display;
-    @extend %button-gradient;
+    @extend %igx-button-display;
+    @extend %igx-button--gradient;
   }
 
   @include m(fab) {
-    @extend %button-display;
-    @extend %button-fab;
+    @extend %igx-button--round;
+    @extend %igx-button--fab;
   }
 
 
   @include m(icon){
-    @extend %button-icon;
+    @extend %igx-button--round;
+    @extend %igx-button--icon;
   }
 
   @include m(navbar){
-    @extend %button-navbar;
+    @extend %igx-button--round;
+    @extend %igx-button--icon;
+    @extend %igx-button--navbar;
   }
 
   @include m(disabled) {
-    @extend %button-disabled;
+    @extend %igx-button--disabled;
   }
 }
