--- a/src/themes/material/modules/_controls.scss
+++ b/src/themes/material/modules/_controls.scss
@@ -9,39 +9,39 @@
         @include hide-default;
         
         ~ #{$block}__label {
-            @extend %radio-lbl-display;
+            @extend %igx-radio-lbl-display;
         }
 
         &:not(:checked) ~ #{$block}__label:before {
-            @extend %radio-lbl-notchecked--before;
+            @extend %igx-radio-lbl-notchecked--before;
         }
         
         &:not(:checked) ~ #{$block}__label:after {
-            @extend %radio-lbl-notchecked--after;
+            @extend %igx-radio-lbl-notchecked--after;
         }
 
         &:checked ~ #{$block}__label:before {
-            @extend %radio-lbl-checked--before;
+            @extend %igx-radio-lbl-checked--before;
         }
 
         &:checked ~ #{$block}__label:after {
-            @extend %radio-lbl-checked--after;
+            @extend %igx-radio-lbl-checked--after;
         }
 
         &:disabled ~ #{$block}__label {
-            @extend %radio-lbl--disabled;
+            @extend %igx-radio-lbl--disabled;
         }
 
         &:disabled:checked ~ #{$block}__label:before {
-            @extend %radio-lbl-checked--disabled-before;
+            @extend %igx-radio-lbl-checked--disabled-before;
         }
 
         &:disabled:checked ~ #{$block}__label:after {
-            @extend %radio-lbl-checked--disabled-after;
+            @extend %igx-radio-lbl-checked--disabled-after;
         }
 
         &:disabled:not(:checked) ~ #{$block}__label:after {
-            @extend %radio-lbl-notchecked--disabled-after;
+            @extend %igx-radio-lbl-notchecked--disabled-after;
         }
     }
     
@@ -50,51 +50,43 @@
         @include hide-default;
 
         ~ #{$block}__label {
-            @extend %cbx-lbl-display;
+            @extend %igx-cbx-lbl-display;
         }
 
         &:not(:checked) ~ #{$block}__label:before {
-            @extend %cbx-lbl-notchecked-before;
+            @extend %igx-cbx-lbl-notchecked-before;
         }
 
         &:not(:checked) ~ #{$block}__label:after {
-            @extend %cbx-lbl-notchecked-after;
+            @extend %igx-cbx-lbl-notchecked-after;
         }
 
         &:checked ~ #{$block}__label:before {
-            @extend %cbx-lbl-checked-before;
+            @extend %igx-cbx-lbl-checked-before;
         }
 
         &:checked ~ #{$block}__label:after {
-            @extend %cbx-lbl-checked-after;
+            @extend %igx-cbx-lbl-checked-after;
         }
 
         &:disabled ~ #{$block}__label {
-            @extend %cbx-lbl-disabled;
+            @extend %igx-cbx-lbl-disabled;
         }
 
         &:disabled:checked ~ #{$block}__label:before {
-            @extend %cbx-lbl-checked--disabled-before;
+            @extend %igx-cbx-lbl-checked--disabled-before;
         }
 
         &:disabled:checked ~ #{$block}__label:after {
-            @extend %cbx-lbl-checked--disabled-after;
+            @extend %igx-cbx-lbl-checked--disabled-after;
         }
 
         &:disabled:not(:checked) ~ #{$block}__label:before {
-            @extend %cbx-lbl-notchecked--disabled-before;
+            @extend %igx-cbx-lbl-notchecked--disabled-before;
         }
 
         &:disabled:not(:checked) ~ #{$block}__label:after {
-            @extend %cbx-lbl-notchecked--disabled-after;
-        }
-
-        &:indeterminate ~ #{$block}__label:before {
-            
-        }
-
-        &:indeterminate ~ #{$block}__label:after {
-            @extend %cbx-lbl--indeterminate-after;
+            @extend %igx-cbx-lbl-notchecked--disabled-after;
         }
     }
 
@@ -103,15 +95,15 @@
         @include hide-default;
 
         ~ #{$block}__label {
-            @extend %switch-lbl-display;
+            @extend %igx-switch-lbl-display;
         }
 
         &:checked ~ #{$block}__label {
-            @extend %switch-lbl--on;
+            @extend %igx-switch-lbl--on;
         }
         
         &:disabled ~ #{$block}__label {
-            @extend %switch-lbl--disabled;
+            @extend %igx-switch-lbl--disabled;
         }
     }
 
