--- a/src/themes/material/modules/_modal.scss
+++ b/src/themes/material/modules/_modal.scss
@@ -1,7 +1,7 @@
 @include b(ig-modal) {
-    @extend %modal-display;
+    @extend %igx-modal-display;
     
     @include e(window) {
-        @extend %modal-window;
+        @extend %igx-modal-window;
     }
 }
