--- a/src/themes/material/modules/_ripple.scss
+++ b/src/themes/material/modules/_ripple.scss
@@ -1,7 +1,7 @@
 @include b(ig-ripple-host) {
-    @extend %ig-ripple-wrapper;
+    @extend %igx-ripple-wrapper;
     
     @include e(ripple) {
-        @extend %ig-ripple-display;
+        @extend %igx-ripple-display;
     }
 }
