added samples for directives, enhanced structure

--- a/demos/app.component.html
+++ b/demos/app.component.html
@@ -9,11 +9,11 @@
                 <span class="titles">components</span><br>
                 <nav>
                     <ul class="nav-list" (click)="navItemClick($event)">
-                        <li #item ><a><span igButton routerLink="/inputs">Switch</span></a></li> 
+                        <li #item ><a><span igButton routerLink="/switch">Switch</span></a></li> 
+                        <li #item ><a><span igButton routerLink="/radio">Radio</span></a></li> 
                         <li #item ><a><span igButton routerLink="/carousel">Carousel</span></a></li> 
                         <li #item ><a><span igButton routerLink="/tabbar">TabBar</span></a></li> 
                         <li #item ><a><span igButton routerLink="/list">List</span></a></li> 
-                        <li #item ><a><span igButton routerLink="/buttons">Buttons</span></a></li> 
                         <li #item ><a><span igButton routerLink="/avatar">Avatar</span></a></li> 
                         <li #item ><a><span igButton routerLink="/navigation-drawer">Navigation Drawer</span></a></li> 
                     </ul>
@@ -23,10 +23,11 @@
                 <span class="titles">directives</span><br>
                 <nav>
                     <ul class="nav-list" (click)="navItemClick($event)">
-                        <li #item><a><span igButton routerLink="/list">filter</span></a></li> 
-                        <li #item><a><span igButton routerLink="/buttons">ripple</span></a></li> 
+                        <li #item><a><span igButton routerLink="/filter">filter</span></a></li> 
+                        <li #item><a><span igButton routerLink="/ripple">ripple</span></a></li> 
                         <li #item><a><span igButton routerLink="/buttons">button</span></a></li> 
                         <li #item><a><span igButton routerLink="/inputs">input</span></a></li> 
+                        <li #item><a><span igButton routerLink="/layout">layout</span></a></li> 
                     </ul>
                 </nav>
             </div>
@@ -39,18 +40,19 @@
                     </button>
                     <ul class="dropdown-menu">
                         <li class="dropdown-header titles" igButton>components</li>
-                        <li><a><span igButton routerLink="/inputs">Switch</span></a></li>
+                        <li><a><span igButton routerLink="/switch">Switch</span></a></li>
+                        <li><a><span igButton routerLink="/radio">Radio</span></a></li>
                         <li><a><span igButton routerLink="/carousel">Carousel</span></a></li>
                         <li><a><span igButton routerLink="/tabbar">TabBar</span></a></li>
                         <li><a><span igButton routerLink="/list">List</span></a></li>
-                        <li><a><span igButton routerLink="/buttons">Buttons</span></a></li>
                         <li><a><span igButton routerLink="/avatar">Avatar</span></a></li>
                         <li><a><span igButton routerLink="/navigation-drawer">Navigation Drawer</span></a></li>
                         <li class="dropdown-header titles" igButton>directives</li>
-                        <li><a><span igButton routerLink="/list">filter</span></a></li>
-                        <li><a><span igButton routerLink="/buttons">ripple</span></a></li>
+                        <li><a><span igButton routerLink="/filter">filter</span></a></li>
+                        <li><a><span igButton routerLink="/ripple">ripple</span></a></li>
                         <li><a><span igButton routerLink="/buttons">button</span></a></li>
                         <li><a><span igButton routerLink="/inputs">input</span></a></li>
+                        <li><a><span igButton routerLink="/layout">layout</span></a></li>
                     </ul>
                 </div>
             </div>
