--- a/demos/switch/switchsample.component.html
+++ b/demos/switch/switchsample.component.html
@@ -1,10 +1,11 @@
 <div id="phoneContainer" class="phone">
     <div id="mobileDiv" class="screen">
         <div>
-            <span class="componentTitle">Radio</span><br>
+            <span class="componentTitle">Switch</span><br>
             <span class="componentDesc">A component that lets the user toggle between checked and unchecked states.</span><br><br>
             <ig-switch [(ngModel)]="user.subscribed"></ig-switch>
             <ig-switch [(ngModel)]="!user.subscribed"></ig-switch>
+            <p>Selected value = {{ user.subscribed }}</p>
         </div>
     </div>
 </div>
