(update) button samples to show igButton used with button elements (update) list samples to include search icon in search bar (update) remove body styling from base.scss (fix) flex doesn't work on button elements in safari (fix) add white background to search inputs (fix) font-sizes don't display correctly in Firefox and other browsers

--- a/src/themes/material/extends/_inputs.scss
+++ b/src/themes/material/extends/_inputs.scss
@@ -94,6 +94,7 @@
 }
 
 %igx-search-input {
+    background: $white;
     padding: 12px 12px 12px 64px;
     border-bottom: none;
     box-shadow: $elevate-2;
