fix issues in IE

--- a/demos/app.component.html
+++ b/demos/app.component.html
@@ -9,13 +9,13 @@
                 <span class="titles">components</span><br>
                 <nav>
                     <ul class="nav-list" (click)="navItemClick($event)">
-                        <li #item ><a><span igButton routerLink="/switch">Switch</span></a></li> 
-                        <li #item ><a><span igButton routerLink="/radio">Radio</span></a></li> 
-                        <li #item ><a><span igButton routerLink="/carousel">Carousel</span></a></li> 
-                        <li #item ><a><span igButton routerLink="/tabbar">TabBar</span></a></li> 
-                        <li #item ><a><span igButton routerLink="/list">List</span></a></li> 
-                        <li #item ><a><span igButton routerLink="/avatar">Avatar</span></a></li> 
-                        <li #item ><a><span igButton routerLink="/navigation-drawer">Navigation Drawer</span></a></li> 
+                        <li #item ><a><span igButton routerLink="/switch">switch</span></a></li> 
+                        <li #item ><a><span igButton routerLink="/radio">radio</span></a></li> 
+                        <li #item ><a><span igButton routerLink="/carousel">carousel</span></a></li> 
+                        <li #item ><a><span igButton routerLink="/tabbar">tabbar</span></a></li> 
+                        <li #item ><a><span igButton routerLink="/list">list</span></a></li> 
+                        <li #item ><a><span igButton routerLink="/avatar">avatar</span></a></li> 
+                        <li #item ><a><span igButton routerLink="/navigation-drawer">navigation drawer</span></a></li> 
                     </ul>
                 </nav>
             </div>
