--- a/demos/ripple/ripplesample.component.html
+++ b/demos/ripple/ripplesample.component.html
@@ -2,18 +2,18 @@
     <div id="mobileDiv" class="screen">
         <div>
             <div class="componentTitle">Ripple</div><br>
-            <ig-tab-bar igRipple igRippleTarget="ul" alignment="bottom">
+            <ig-tab-bar alignment="bottom">
                 <ig-tab label="Tab 1" icon="library_music">                        
                     <span class="componentDesc">Ripple directive can be applied basically to every element, <span igRipple>even this span !</span> to enable glamourous ripple effect on click, like the tabs below. Explore the other tabs as well.</span><br>
                     </ig-tab>
                 <ig-tab label="Tab 2" icon="video_library">
                     <ig-list #declarativeList>
                         <ig-list-header>Mildly Sweet</ig-list-header>
-                        <ig-list-item igRipple igRippleTarget="div.ig-list__item">Red Delicious</ig-list-item>
-                        <ig-list-item igRipple igRippleTarget="div.ig-list__item">Ambrosia</ig-list-item>
-                        <ig-list-item igRipple igRippleTarget="div.ig-list__item">Rome</ig-list-item>
-                        <ig-list-item igRipple igRippleTarget="div.ig-list__item">Golden Delicious</ig-list-item>
-                        <ig-list-item igRipple igRippleTarget="div.ig-list__item">Cosmic Crisp</ig-list-item>
+                        <ig-list-item>Red Delicious</ig-list-item>
+                        <ig-list-item>Ambrosia</ig-list-item>
+                        <ig-list-item>Rome</ig-list-item>
+                        <ig-list-item>Golden Delicious</ig-list-item>
+                        <ig-list-item>Cosmic Crisp</ig-list-item>
                     </ig-list>
                 </ig-tab>
             </ig-tab-bar>
