--- a/demos/tabbar/tabbarsample.component.html
+++ b/demos/tabbar/tabbarsample.component.html
@@ -2,7 +2,7 @@
     <div id="mobileDiv" class="screen">
         <div>
             <div class="componentTitle">TabBar</div><br>
-            <ig-tab-bar igRipple igRippleTarget="ul" alignment="bottom">
+            <ig-tab-bar alignment="bottom">
                 <ig-tab label="Tab 1" icon="library_music">                        
                     <span class="componentDesc">IgTabBar allow you to tabulate your content. It provides flexible ways to manage and navigate through your tabularized data. </span><br>
                     </ig-tab>
