(refactor) app component class

--- a/demos/app.component.html
+++ b/demos/app.component.html
@@ -66,8 +66,8 @@
             </nav>
         </header>
         <div class="code-snipet">
-            <pre>
-                <code #code class="language-html"></code>
+            <pre class="language-markup">
+                <code #code class="language-markup"></code>
             </pre>
         </div>
     </section>
