(improvement) initial styling for the code section

--- a/demos/app.component.html
+++ b/demos/app.component.html
@@ -66,9 +66,7 @@
             </nav>
         </header>
         <div class="code-snipet">
-            <pre class="language-markup">
-                <code #code class="language-markup"></code>
-            </pre>
+        <pre class="line-numbers"><code #code class="language-*"></code></pre>
         </div>
     </section>
 </div>
