--- a/code-blocks-theme.css
+++ b/code-blocks-theme.css
@@ -1,16 +1,13 @@
 .code-snipet {
-    margin: 0 -20px -20px -20px;
+    margin: 0 -20px 0 -20px;
 }
 
 pre[class*=language-] {
     padding-top: 0;
     padding-bottom: 0;
-    padding-left: 30px;
+    padding-left: 45px;
+    padding-right: 20px;
+    margin: 0;
     background: transparent;
     font-size: 13px;
-}
-
-.line-numbers .line-numbers-row {
-    border-right: none !important;
-    width: 10px;
 }
