--- a/src/themes/material/extends/_inputs.scss
+++ b/src/themes/material/extends/_inputs.scss
@@ -20,9 +20,9 @@
     cursor: text;
     user-select: none;
     pointer-events: none;
-    text-shadow: 0 0 1px #fff;
     transform: translate3d(0,0,0);
     transition: transform .25s ease-out;
+    -webkit-font-smoothing: antialiased;
 }
 
 %igx-form-label--float {
