Fixing Html and scss code

--- a/demos/carousel/carouselsample.component.html
+++ b/demos/carousel/carouselsample.component.html
@@ -1,13 +1,7 @@
-<div id="phoneContainer" class="phone">
-    <div id="mobileDiv" class="screen">
-        <div style="width: 100%;">
-            <span class="componentTitle">Carousel</span><br>
-            <span class="componentDesc">Allows you to cycle thorugh photos or other content as in a slideshow.</span><br><br>
-            <ig-carousel [interval]="interval" [pause]="pause" [loop]="loop">
-                <ig-slide *ngFor="let slide of slides;" [active]="slide.active">
-                    <img [src]="slide.image">
-                </ig-slide>
-            </ig-carousel>
-        </div>
-    </div>
-</div>
+<h1 class="componentTitle">Carousel</h1><br>
+<p class="componentDesc">Allows you to cycle thorugh photos or other content as in a slideshow.</p><br><br>
+<ig-carousel [interval]="interval" [pause]="pause" [loop]="loop">
+    <ig-slide *ngFor="let slide of slides;" [active]="slide.active">
+        <img [src]="slide.image">
+    </ig-slide>
+</ig-carousel>
