--- a/demos/filter/filtersample.component.html
+++ b/demos/filter/filtersample.component.html
@@ -1,16 +1,11 @@
-<div id="phoneContainer" class="phone">
-    <div id="mobileDiv" class="screen">
-        <div>
-            <span class="componentTitle">Filter</span><br>
-            <span class="componentDesc">A directive that allows to do filtering, for example on the list as below.</span><br>           
-                <div class="ig-form-group">
-                    <input class="ig-form-group__input--search" placeholder="Search List" [(ngModel)]="search1" />
-                </div>
-                <ig-list>
-                    <ig-list-item igRipple="pink" igRippleTarget=".ig-list__item" *ngFor="let item of navItems | filter: fo1">
-                        {{item.text}}
-                    </ig-list-item>
-                </ig-list>     
-        </div>
-    </div>
+
+<h1 class="componentTitle">Filter</h1>
+<p class="componentDesc">A directive that allows to do filtering, for example on the list as below.</p>
+<div class="ig-form-group">
+    <input class="ig-form-group__input--search" placeholder="Search List" [(ngModel)]="search1" />
 </div>
+<ig-list>
+    <ig-list-item igRipple="pink" igRippleTarget=".ig-list__item" *ngFor="let item of navItems | filter: fo1">
+        {{item.text}}
+    </ig-list-item>
+</ig-list>
