--- a/demos/layout/layoutsample.component.html
+++ b/demos/layout/layoutsample.component.html
@@ -1,10 +1,5 @@
-<div id="phoneContainer" class="phone">
-    <div id="mobileDiv" class="screen">
-        <div>
-            <div class="componentTitle">Layout</div><br>
-            <div igLayout>
-                <span>A layout directive !</span>
-            </div>
-        </div>
-    </div>
+
+<h1 class="componentTitle">Layout</h1>
+<div igLayout>
+    <span>A layout directive !</span>
 </div>
