--- a/demos/switch/switchsample.component.html
+++ b/demos/switch/switchsample.component.html
@@ -1,11 +1,7 @@
-<div id="phoneContainer" class="phone">
-    <div id="mobileDiv" class="screen">
-        <div>
-            <span class="componentTitle">Switch</span><br>
-            <span class="componentDesc">A component that lets the user toggle between checked and unchecked states.</span><br><br>
-            <ig-switch [(ngModel)]="user.subscribed"></ig-switch>
-            <ig-switch [(ngModel)]="!user.subscribed"></ig-switch>
-            <p>Selected value = {{ user.subscribed }}</p>
-        </div>
-    </div>
+<h1 class="componentTitle">Switch</h1>
+<p class="componentDesc">A component that lets the user toggle between checked and unchecked states.</p>
+<div class="component-wrap">
+    <ig-switch [(ngModel)]="user.subscribed"></ig-switch>
+    <ig-switch [(ngModel)]="!user.subscribed"></ig-switch>
 </div>
+<span>Selected value = {{ user.subscribed }}</span>
