--- a/styles/_responsive.scss
+++ b/styles/_responsive.scss
@@ -69,7 +69,8 @@
     min-height : 40px;
     left       : 0;
     top        : 0;
-    padding    : 0;
+    padding    : 0 0 em(65) 0;
+
   }
 
   .dropdown
