--- a/styles/components/_header.scss
+++ b/styles/components/_header.scss
@@ -22,5 +22,5 @@
 {
   border-bottom : 2px solid $primary-color;
   padding       : em(20);
-  margin        : em(-20);
+  margin        : em(-20) em(-20) 0 em(-20);
 }
