--- a/styles/gh-pages.scss
+++ b/styles/gh-pages.scss
@@ -5,12 +5,12 @@
 
 @import 'components/icons';
 @import 'components/buttons';
-@import 'components/base';
+@import 'base';
 @import 'components/header';
 @import 'components/sections';
 @import 'components/footer';
 @import 'components/navs';
 @import 'components/badges';
-@import 'components/code-theme';
+@import 'override';
 
 @import 'responsive';
