--- a/demos/list/listsample.component.html
+++ b/demos/list/listsample.component.html
@@ -1,16 +1,10 @@
-<div id="phoneContainer" class="phone">
-    <div id="mobileDiv" class="screen">
-        <div>
-            <span class="componentTitle">List</span><br>
-            <span class="componentDesc">A component that displays items that can be declared or retrieved from a data source.</span><br><br>         
-            <ig-list #declarativeList>
-                <ig-list-header>Mildly Sweet</ig-list-header>
-                <ig-list-item>Red Delicious</ig-list-item>
-                <ig-list-item>Ambrosia</ig-list-item>
-                <ig-list-item>Rome</ig-list-item>
-                <ig-list-item>Golden Delicious</ig-list-item>
-                <ig-list-item>Cosmic Crisp</ig-list-item>
-            </ig-list>    
-        </div>
-    </div>
-</div>
+<h1 class="componentTitle">List</h1>
+<p class="componentDesc">A component that displays items that can be declared or retrieved from a data source.</p>
+<ig-list #declarativeList>
+    <ig-list-header><h3>Mildly Sweet</h3></ig-list-header>
+    <ig-list-item>Red Delicious</ig-list-item>
+    <ig-list-item>Ambrosia</ig-list-item>
+    <ig-list-item>Rome</ig-list-item>
+    <ig-list-item>Golden Delicious</ig-list-item>
+    <ig-list-item>Cosmic Crisp</ig-list-item>
+</ig-list>
