--- a/demos/ripple/ripplesample.component.html
+++ b/demos/ripple/ripplesample.component.html
@@ -1,22 +1,17 @@
-<div id="phoneContainer" class="phone">
-    <div id="mobileDiv" class="screen">
-        <div>
-            <div class="componentTitle">Ripple</div><br>
-            <ig-tab-bar igRipple igRippleTarget="ul" alignment="bottom">
-                <ig-tab label="Tab 1" icon="library_music">                        
-                    <span class="componentDesc">Ripple directive can be applied basically to every element, <span igRipple>even this span !</span> to enable glamourous ripple effect on click, like the tabs below. Explore the other tabs as well.</span><br>
-                    </ig-tab>
-                <ig-tab label="Tab 2" icon="video_library">
-                    <ig-list #declarativeList>
-                        <ig-list-header>Mildly Sweet</ig-list-header>
-                        <ig-list-item igRipple igRippleTarget="div.ig-list__item">Red Delicious</ig-list-item>
-                        <ig-list-item igRipple igRippleTarget="div.ig-list__item">Ambrosia</ig-list-item>
-                        <ig-list-item igRipple igRippleTarget="div.ig-list__item">Rome</ig-list-item>
-                        <ig-list-item igRipple igRippleTarget="div.ig-list__item">Golden Delicious</ig-list-item>
-                        <ig-list-item igRipple igRippleTarget="div.ig-list__item">Cosmic Crisp</ig-list-item>
-                    </ig-list>
-                </ig-tab>
-            </ig-tab-bar>
-        </div>
-    </div>
-</div>
+
+<h1 class="componentTitle">Ripple</h1>
+<ig-tab-bar class="ripple-wrapper" igRipple igRippleTarget="ul" alignment="bottom">
+    <ig-tab label="Tab 1" icon="library_music">
+        <p class="componentDesc">Ripple directive can be applied basically to every element, <span igRipple>even this span !</span> to enable glamourous ripple effect on click, like the tabs below. Explore the other tabs as well.</p>
+        </ig-tab>
+    <ig-tab  label="Tab 2" icon="video_library">
+        <ig-list #declarativeList>
+            <ig-list-header><h3>Mildly Sweet</h3></ig-list-header>
+            <ig-list-item igRipple igRippleTarget="div.ig-list__item">Red Delicious</ig-list-item>
+            <ig-list-item igRipple igRippleTarget="div.ig-list__item">Ambrosia</ig-list-item>
+            <ig-list-item igRipple igRippleTarget="div.ig-list__item">Rome</ig-list-item>
+            <ig-list-item igRipple igRippleTarget="div.ig-list__item">Golden Delicious</ig-list-item>
+            <ig-list-item igRipple igRippleTarget="div.ig-list__item">Cosmic Crisp</ig-list-item>
+        </ig-list>
+    </ig-tab>
+</ig-tab-bar>
