--- a/demos/tabbar/tabbarsample.component.html
+++ b/demos/tabbar/tabbarsample.component.html
@@ -1,17 +1,16 @@
-<div id="phoneContainer" class="phone">
-    <div id="mobileDiv" class="screen">
-        <div>
-            <div class="componentTitle">TabBar</div><br>
-            <ig-tab-bar igRipple igRippleTarget="ul" alignment="bottom">
-                <ig-tab label="Tab 1" icon="library_music">                        
-                    <span class="componentDesc">IgTabBar allow you to tabulate your content. It provides flexible ways to manage and navigate through your tabularized data. </span><br>
-                    </ig-tab>
-                <ig-tab label="Tab 2" icon="video_library">
-                    <p>You can style each tab with a material icon as demosntrated below.</ig-tab>
-                <ig-tab label="Tab 3" icon="library_books">
-                    <p>Attaching to click events allow you to customize the way your TabBar is working.
-                </ig-tab>
-            </ig-tab-bar>
-        </div>
-    </div>
-</div>
+<h1 class="componentTitle">TabBar</h1>
+<ig-tab-bar igRipple igRippleTarget="ul" alignment="bottom">
+
+    <ig-tab label="Tab 1" icon="library_music">
+        <p class="componentDesc">IgTabBar allow you to tabulate your content. It provides flexible ways to manage and navigate through your tabularized data. </p>
+    </ig-tab>
+
+    <ig-tab label="Tab 2" icon="video_library">
+        <p class="componentDesc">You can style each tab with a material icon as demosntrated below.
+    </ig-tab>
+
+    <ig-tab label="Tab 3" icon="library_books">
+        <p class="componentDesc">Attaching to click events allow you to customize the way your TabBar is working.
+    </ig-tab>
+
+</ig-tab-bar>
