--- a/demos/ripple/ripplesample.component.html
+++ b/demos/ripple/ripplesample.component.html
@@ -1,22 +1,12 @@
 <div id="phoneContainer" class="phone">
     <div id="mobileDiv" class="screen">
         <div>
-            <div class="componentTitle">Ripple</div><br>
-            <ig-tab-bar alignment="bottom">
-                <ig-tab label="Tab 1" icon="library_music">                        
-                    <span class="componentDesc">Ripple directive can be applied basically to every element, <span igRipple>even this span !</span> to enable glamourous ripple effect on click, like the tabs below. Explore the other tabs as well.</span><br>
-                    </ig-tab>
-                <ig-tab label="Tab 2" icon="video_library">
-                    <ig-list #declarativeList>
-                        <ig-list-header>Mildly Sweet</ig-list-header>
-                        <ig-list-item>Red Delicious</ig-list-item>
-                        <ig-list-item>Ambrosia</ig-list-item>
-                        <ig-list-item>Rome</ig-list-item>
-                        <ig-list-item>Golden Delicious</ig-list-item>
-                        <ig-list-item>Cosmic Crisp</ig-list-item>
-                    </ig-list>
-                </ig-tab>
-            </ig-tab-bar>
+            <span class="componentTitle">Ripple</span><br>
+            <span>Ripple directive can be applied basically to every element like the buttons below to enable glamourous ripple effect on click.</span><br><br>
+            <span igButton="gradient" igRipple="white">Gradient</span><br>
+            <span igButton="fab" igButtonColor="#484848" igButtonBackground="white" igRipple="#484848"><br>
+                <i class="material-icons">edit</i>
+            </span>
         </div>
     </div>
 </div>
