--- a/demos/ripple/ripplesample.component.html
+++ b/demos/ripple/ripplesample.component.html
@@ -1,17 +1,6 @@
 
 <h1 class="componentTitle">Ripple</h1>
-<ig-tab-bar class="ripple-wrapper" igRipple igRippleTarget="ul" alignment="bottom">
-    <ig-tab label="Tab 1" icon="library_music">
-        <p class="componentDesc">Ripple directive can be applied basically to every element, <span igRipple>even this span !</span> to enable glamourous ripple effect on click, like the tabs below. Explore the other tabs as well.</p>
-        </ig-tab>
-    <ig-tab  label="Tab 2" icon="video_library">
-        <ig-list #declarativeList>
-            <ig-list-header><h3>Mildly Sweet</h3></ig-list-header>
-            <ig-list-item igRipple igRippleTarget="div.ig-list__item">Red Delicious</ig-list-item>
-            <ig-list-item igRipple igRippleTarget="div.ig-list__item">Ambrosia</ig-list-item>
-            <ig-list-item igRipple igRippleTarget="div.ig-list__item">Rome</ig-list-item>
-            <ig-list-item igRipple igRippleTarget="div.ig-list__item">Golden Delicious</ig-list-item>
-            <ig-list-item igRipple igRippleTarget="div.ig-list__item">Cosmic Crisp</ig-list-item>
-        </ig-list>
-    </ig-tab>
-</ig-tab-bar>
+<p class="componentDesc">The ripple directive can be applied to every relatively positioned element.</p>
+<div igRipple="white" style="display: flex; align-items: center; justify-content: center;position: relative; width: 90%; height: 75px; background-color: #0375be; margin: 80px auto; border-radius: 2px; color: white; cursor: pointer;">
+    <p style="user-select: none;">Touch/Click Me!</p>
+</div>
